Refactor to introduce `Rulable` interface for rule abstraction; replace `Rule` with `Rulable` across the codebase and rename `Playable` to `ableToPlayAlone` for clarity.